<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nesterkin.currencyconverter.view.CurrencyActivity">

    <TextView
        android:id="@+id/load_error_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/connection_error_text_view" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="@dimen/padding"
                    android:text="@string/from_text_view" />

                <Spinner
                    android:id="@+id/from_currency_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding" />
            </LinearLayout>

            <EditText
                android:id="@+id/value_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:hint="@string/hint_edit_text"
                android:inputType="numberDecimal"
                android:padding="@dimen/padding" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="@dimen/padding"
                    android:text="@string/to_text_view" />

                <Spinner
                    android:id="@+id/to_currency_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding" />
            </LinearLayout>

            <Button
                android:id="@+id/convert_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/convert_button" />

            <TextView
                android:id="@+id/result_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/result_hint_text_view"
                android:padding="@dimen/padding"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
